--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 group = 'org.teenkung'
@@ -15,10 +16,39 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven {
+        name = "vault"
+        url = 'https://jitpack.io'
+    }
+    maven {
+        name = 'jitpack'
+        url = 'https://jitpack.io'
+    }
+    maven {
+        name = 'nbtapi'
+        url = 'https://repo.codemc.org/repository/maven-public/'
+    }
+    maven{
+        name = 'mmoitems'
+        url = 'https://mvn.lumine.io/repository/maven-public/'
+    }
 }
 
 dependencies {
     compileOnly "org.spigotmc:spigot-api:1.19.3-R0.1-SNAPSHOT"
+    compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
+    compileOnly("net.Indyuce:MMOItems:6.7.3")
+    compileOnly("io.lumine:MythicLib-dist:1.4")
+    compileOnly("de.tr7zw:item-nbt-api-plugin:2.11.1")
+    compileOnly 'com.github.LoneDev6:API-ItemsAdder:3.2.5'
+    implementation fileTree('libs')
+}
+
+shadowJar {
+    dependencies {
+        include dependency('com.iridium:IridiumColorAPI:1.0.6')
+        include dependency("de.tr7zw:item-nbt-api-plugin:2.11.1")
+    }
 }
 
 def targetJavaVersion = 17
